# familycal

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  websocket.py
backend/app/core/: __init__.py  crypto.py  oauth.py  scheduler.py  settings_store.py
backend/app/plugins/: __init__.py  base.py  loader.py  registry.py
backend/app/routers/: __init__.py  calendar.py  events.py  oauth.py  plugins.py  profiles.py  settings.py  system.py
backend/plugins/: __init__.py
backend/plugins/calendar_plugin/: __init__.py
backend/plugins/slideshow_plugin/: __init__.py
backend/plugins/weather_plugin/: __init__.py
backend/tests/: __init__.py  conftest.py  test_calendar_merge.py  test_crypto.py  test_events.py  test_health.py  test_plugins.py  test_profiles.py  test_scheduler.py  test_security_fixes.py  test_settings.py  test_websocket.py
frontend/: 40-gen-tls-cert.sh  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js  ws.js
frontend/src/components/: Button.jsx  Card.jsx  ColorPicker.jsx  Icon.jsx  Modal.jsx  OnScreenKeyboard.jsx  Spinner.jsx  StatusDot.jsx  TextInput.jsx  Toggle.jsx
frontend/src/hooks/: useApi.js  useIdle.js  usePluginSettings.js  useSettings.js  useWakeLock.js  useWebSocket.js
frontend/src/lib/: color.js  (+1 more)
(+8 files in other folders)
